--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
         <p>The following are services that we offer:</p>
     </div><br>
     <div class="image" style="text-align: center;">
-        <img src="/image/dinner.jpeg" alt="Food" width="350px" height="350px">
-        <img src="/image/salad.jpeg" alt="Salad" width="350px" height="350px">
-        <img src="/image/Juice.jpeg" alt="Juice" width="350px" height="350px">
+        <img src="image/dinner.jpeg" alt="Food" width="350px" height="350px">
+        <img src="image/salad.jpeg" alt="Salad" width="350px" height="350px">
+        <img src="image/Juice.jpeg" alt="Juice" width="350px" height="350px">
     </div>
     </div><br>
     <div class="image" style="text-align: center;">
-        <img src="/image/dinner.jpeg" alt="Food" width="350px" height="350px">
-        <img src="/image/salad.jpeg" alt="Salad" width="350px" height="350px">
-        <img src="/image/Juice.jpeg" alt="Juice" width="350px" height="350px">
+        <img src="image/dinner.jpeg" alt="Food" width="350px" height="350px">
+        <img src="image/salad.jpeg" alt="Salad" width="350px" height="350px">
+        <img src="image/Juice.jpeg" alt="Juice" width="350px" height="350px">
     </div>
 
 </body>
